force-app/main/default/objects/Module_Response__c/fields/Progression__c.field-meta.xml
<CustomField>
    <fullName>Progression__c</fullName>
    <formula>100 / Unit_Response_Quantity__c * Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progression</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>