force-app/main/default/objects/Module_Response__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Units completed</label>
    <summaryFilterItems>
        <field>Unit_Response__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit_Response__c.Module_Response__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>